panda as pic in left

--- a/firstClass/PandaCard.html
+++ b/firstClass/PandaCard.html
@@ -10,7 +10,7 @@
 <style>
 body {
     font-family: Arial, sans-serif;
-    display: grid;
+    /* display: grid; */
     justify-content: center;
     align-items: center;
     height: 100vh;
@@ -19,9 +19,9 @@ body {
     
 }
 
-.container {
-    text-align: center;
-}
+/* .container {
+     text-align: center; 
+}*/ 
 
 h1 {
     font-size: 36px;
