--- a/firstClass/invt4card.html
+++ b/firstClass/invt4card.html
@@ -7,5 +7,12 @@
 </head>
 <body>
     
+    <div id="banner">
+        <img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/Vijay_Shekhar_Sharma_Paytm_96f52579b8.jpg" alt="">
+        <h3>Vijay Shekhar </h3>
+        <p>Founder & CEO</p>
+        <img style="width:50%" src="https://masai-website-images.s3.ap-south-1.amazonaws.com/paytm_rect_06df45a24f.svg" alt="error">
+
+    </div>
 </body>
 </html>
