4 card invester DONE

--- a/firstClass/invt4card.html
+++ b/firstClass/invt4card.html
@@ -34,9 +34,13 @@
             box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
               
         }
+        h1{
+            text-align: center;
+        }
 
 </style>
 <body>
+    <h1>Strategic Investors</h1>
     
     <div id="banner">
         <div>
