--- a/firstClass/masaiInv.html
+++ b/firstClass/masaiInv.html
@@ -25,6 +25,8 @@
             display: grid;
             grid-template-columns: repeat(3, 1fr);
             gap: 20px; 
+            flex-direction: row;
+            justify-content: flex-end;
             
         }
         #banner>div{
