masai about inv

--- a/firstClass/masaiInv.html
+++ b/firstClass/masaiInv.html
@@ -57,13 +57,21 @@
             /* place-items: center; */
             text-align: center;
         }
-        h3{
-            margin-top: 20px;
-            text-align: center;
-        }
-        p{
+        /* h3{
             
-        }
+            text-align: center;
+        } */
+       div > h3{
+        margin-top: 40px;
+        text-align: justify;
+   
+       }
+
+       div > p{
+          margin-top: 10px;
+        text-align: justify;
+        text-align: inherit;
+       }
        #btn{
             border: none;
             justify-content: center;
@@ -78,7 +86,10 @@
         #btn:hover{
             /* background-color: cadetblue; */
             color: cadetblue;
-            
+
+        }
+        div > date{
+            text-align: start;
         }
 </style>
 <body>
@@ -89,17 +100,17 @@
         <div>
             <img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/money_Control_c3e25f5ceb.png" height="300px" width="200px" alt="">
             <data style="color: blue;" value="text-align">26 Oct 2021</data>
-            <h3>Kunal Shah, Vijay Shekhar Sharma,
-                Amrish Rau among 21 angel investors in
+            <h3>Kunal Shah, Vijay Shekhar Sharma, 
+                Amrish <br> Rau among 21 angel investors <br> in
                 Masai School</h3>
             <p>Masai School is aiming to expand to 20
                 smaller cities by March 2022 and exp...</p>
         </div>
         <div>
             <img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/ET_3754cc10ec.png" height="300px" width="200px" alt="">
-            <data style="color: blue;" value="text-align">26 Oct 2021</data>
-            <h3>Kunal Shah, Vijay Shekhar Sharma,
-                Amrish Rau among 21 angel investors in
+            <data style="color: blue;" value="">26 Oct 2021</data>
+            <h3>Kunal Shah, Vijay Shekhar Sharma, 
+                Amrish <br> Rau among 21 angel investors <br> in
                 Masai School</h3>
             <p>Masai School is aiming to expand to 20
                 smaller cities by March 2022 and exp...</p>
@@ -107,8 +118,8 @@
         <div>
             <img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/vccircle_6ef779c958.png"height="300px" width="200px" alt="">
             <data style="color: blue;" value="text-align">26 Oct 2021</data>
-            <h3>Kunal Shah, Vijay Shekhar Sharma,
-                Amrish Rau among 21 angel investors in
+            <h3>Kunal Shah, Vijay Shekhar Sharma, 
+                Amrish <br> Rau among 21 angel investors <br> in
                 Masai School</h3>
             <p>Masai School is aiming to expand to 20
                 smaller cities by March 2022 and exp...</p>
