table done as in image

--- a/AssignmentW2/productTable.html
+++ b/AssignmentW2/productTable.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Table</title>
 </head>
-<style>
+<!-- <style>
+
  table {
     width: 50%;
     border-collapse: collapse;
@@ -28,7 +29,7 @@ th, td {
 }
 
 /* Highlight all multiples of 3 */
-tr:nth-child(3n) {
+td:nth-child(3n) {
     font-weight: bold;
     font-size: large;
     color: green;
@@ -44,6 +45,59 @@ tbody tr:last-child {
     background-color: yellow;
     
 }
+</style> -->
+<style>
+    /* styles.css */
+table {
+    width: 50%;
+    border-collapse: collapse;
+    margin: 20px auto;
+    font-family: ;
+}
+
+th {
+    background-color: rgb(206, 206, 206);
+    font-weight: bold;
+    font-size: 40px;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+th, td {
+    border: 1px solid #ddd;
+    padding: 8px;
+    text-align: center;
+}
+tr:nth-child(2) {
+    font-weight: bold;
+    font-size: 40px;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+
+tr:nth-child(4) {
+    font-weight: bold;
+    color: green;
+    font-size: 40px;
+}
+tr:nth-child(7) {
+    font-weight: bold;
+    color: green;
+}
+tr:nth-child(10) {
+    font-weight: bold;
+    color: green;
+    font-size: 30px;
+}
+
+td:nth-child(4n+1) {
+    font-style: italic;
+    font-size: 30px;
+}
+
+tbody tr:last-child {
+    background-color: yellow;
+}
+
 </style>
 <body>
     <div>
