--- a/AssignmentW2/productTable.html
+++ b/AssignmentW2/productTable.html
@@ -35,12 +35,19 @@ tr:nth-child(2) {
 tr:nth-child(4) {
     font-weight: bold;
     color: green;
-    font-size: 40px;
+    /* font-size: 40px; */
 }
+tr:nth-child(6) {
+    font-weight: bold;
+    font-size: 40px; 
+
+}
+
 tr:nth-child(7) {
     font-weight: bold;
     color: green;
 }
+
 tr:nth-child(10) {
     font-weight: bold;
     color: green;
