--- a/AssignmentW2/meesho.html
+++ b/AssignmentW2/meesho.html
@@ -25,6 +25,7 @@ nav ul {
   justify-content: space-around;
 }
 
+
 nav ul li {
   display: inline-block;
 }
@@ -47,6 +48,8 @@ main {
 /* Styling for product card */
 .product-card {
   display: grid;
+  flex-wrap: wrap;
+  align-content: flex-start;
   border: 1px solid #ddd;
   margin-bottom: 20px;
   box-shadow: rgba(136, 165, 191, 0.48) 6px 2px 16px 0px, rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
@@ -97,11 +100,7 @@ footer {
   transform: translateY(-50%);
   color: #aaa; /* Adjust the color of the icon */
 }
-.main > img{
-    height: 100px;
-    width: 100px;
-    border: 1px solid red;
-}
+
 
 
 
@@ -125,6 +124,7 @@ footer {
       </ul>
     </nav>
   </header>
+  <hr style="background-color:  #f8f8f8; ">
   <header>
     <nav>
         <ul>
