--- a/AssignmentW2/miStore.html
+++ b/AssignmentW2/miStore.html
@@ -72,27 +72,18 @@ nav ul li a {
 /* box style */
 #upper{
   display: grid;
-  border: 1px solid red;
+  /* border: 1px solid red; */
   grid-template-columns: repeat(4, 1fr);
   margin-left: 10px; 
   flex-wrap: wrap;
+  margin-bottom: 25px; 
 }
 #upper > div{
-  /* border: 1px solid red; */
-
-
   height: 450px;
   width: 280px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  /* margin: auto; */
-  /* justify-content: center; */
+}
 
-}
-#upper > div >img{
-  width: 70%;
-  margin: auto;
-  align-items: end;
-}
 /* text on image  */
 .image-container {
     position: relative;
@@ -123,11 +114,21 @@ nav ul li a {
 /* lower grid */
 #lower{
   display: grid;
-  border: 1px solid red;
+  /* border: 1px solid red; */
   grid-template-columns: repeat(4, 1fr);
   margin-left: 10px; 
   flex-wrap: wrap;
+  margin-top: 25px;
+  margin-bottom: 25px; 
+
 }
+
+#lower > div{
+  height: 450px;
+  width: 280px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
 </style>
 <body>
     <header>
