--- a/AssignmentW2/miStore.html
+++ b/AssignmentW2/miStore.html
@@ -11,7 +11,8 @@
 <style>
 header {
   background-color: rgb(255, 255, 255);
-  padding: 10px 0;
+  /* padding: 10px 0; */
+  box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
 }
 
 /* Styling for navigation */
@@ -40,6 +41,7 @@ nav ul li a {
 .navbar {
     background-color: #333;
     overflow: hidden;
+    box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
 }
 
 .navbar ul {
@@ -48,10 +50,12 @@ nav ul li a {
     padding: 0;
     display: flex;
     justify-content: center;
+    box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
 }
 
 .navbar ul li {
     float: left;
+    box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
 }
 
 .navbar ul li a {
