--- a/CssMediaQure/theInfoBox.html
+++ b/CssMediaQure/theInfoBox.html
@@ -1,48 +1,71 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>This is Info Box</title>
+    <title>Button and Info Box</title>
     <style>
-        /* #box{
-            height: 150px;
-            width: 250px;
-            border: 1px solid;
-            text-align: center;
 
-        } */
-        button{
-        position: relative;
-        top: 60px;
-        background-color: red;
-        border: 2px solid red;
-        border-radius: 10px;
-        color: aliceblue;
-        font-size: medium;
-        transition:transform 2s ;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
+.container {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
-        }
-        button:hover{
-            transform: scaleX(2) active 1s;
-            
-        }
-        #box:active{
-            height: 150px;
-            width: 250px;
-            border: 1px solid;
-            text-align: center;
+.center-button {
+    position: absolute;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    z-index: 1;
+    background-color: red;
+    border: none;
+    border-radius: 10px;
+}
 
-        }
+.info-box {
+    position: absolute;
+    display: none;
+    padding: 20px;
+    background-color: red;
+    border: 1px solid #000;
+    /* text-align: center; */
+    font-size: medium;
+    height: 200px;
+    width: 250px;
+}
+
+.center-button:active ~ .info-box {
+    display: block;
+    z-index: 2;
+}
+
+.center-button:active {
+    display: none;
+}
+
+.info-box {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
 
     </style>
 </head>
 <body>
-
-    <div id="box">
-        <button>Read Info</button>
+    <div class="container">
+        <button class="center-button">Read Info</button>
+        <div class="info-box">This is the info</div>
     </div>
-    
 </body>
 </html>
