--- a/sass/assignmentU3s3/color/color.html
+++ b/sass/assignmentU3s3/color/color.html
@@ -5,7 +5,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sass Color</title>
   <link rel="stylesheet" href="./style.scss">
+    <style>
+        .square {
+  background-color: #3498db;
+  width: 100px;
+  height: 100px;
+}
 
+.circle {
+  border: 5px solid #3498db;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+}
+
+h1 {
+  color: #3498db;
+}/*# sourceMappingURL=style.css.map */
+    </style>
 </head>
 <body>
   <h1>This is a heading</h1>
