--- a/Animation/Assigmnent/buttonhover.html
+++ b/Animation/Assigmnent/buttonhover.html
@@ -5,16 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Button Transition</title>
   <style>
-    /* Base button styles */
+    body{
+        margin-top: 80px;
+        display: grid;
+        justify-content: center;
+    }
     .my-button {
       padding: 10px 20px;
       font-size: 16px;
       background-color: #ccc;
       border: none;
+      border-radius: 20px;
       cursor: pointer;
       transition: background-color 5s ease;
-      align-items: center;
-      margin: 800px 380px;
+     
     }
 
     .my-button:hover {
