--- a/EvalutionS3figma/index.html
+++ b/EvalutionS3figma/index.html
@@ -12,8 +12,8 @@
     <nav>
         <div id="container">
             <div id="navlog">
-                <!-- <div class="navbox"></div>
-                <div class="navbox1"></div> -->
+                <div class="navbox"></div>
+                <div class="navbox1"></div> 
                 <h1>Resume.AI</h1>
     
             </div>
