--- a/EvalutionS3figma/index.html
+++ b/EvalutionS3figma/index.html
@@ -47,11 +47,45 @@
                     <p>Calibri</p>
                 </div>
                 <div id="color">
-
+                    <h2>COLORS</h2>
+                    <div>
+                        <div class="circle"></div>
+                        <div class="circle"></div>
+                        <div class="circle"></div>
+                        <div class="circle"></div>
+                        <div class="circle"></div>
+                        <div class="circle"></div>
+                        <div class="circle"></div>
+                        <div class="circle"></div>
+                        <div class="circle"></div>
+                        <div class="circle"></div>
+                    </div>
+                    
+                    
+                    <span>Use Custom Color</span>
                 </div>
                 <div id="bgrect">
 
                 </div>
+            </div>
+        </div>
+        <h1>Why choose AI resume maker? </h1>
+        <div id="banner2right">
+            <div>
+                <h3>Real-time preview</h3>
+                <p>Preview the resumes real-time while 
+                    adding the details.</p>
+                <h3>Templates Library</h3>
+                <p>Select from a wide range of templates
+                    that suits your professional needs.</p>
+                <h3>Dynamic Content Generation</h3>
+                <p>Automatically creates content based on
+                    your inputs. </p>
+                <h3>Keyword optimization</h3>
+                <p>Strategically select and incorporate 
+                    relevant keywords within the content of 
+                    your resume or CV</p>
+
             </div>
         </div>
     </main>
