--- a/EvalutionS3figma/index.html
+++ b/EvalutionS3figma/index.html
@@ -91,9 +91,12 @@
             </div>
         </div>
         <div id="banner2left">
-            <img src="https://s3-alpha-sig.figma.com/img/bcf1/1e0f/89349f78ed6fcbfb1cc2fead6254686f?Expires=1718582400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=TK0~fdoYL07BOOfL16j2j6k6ka-4B9LRahyZame3pSW7b9O1fecC8GOUHS8m6eIY~GgyvFeTHubDaDzBp7~k8e8u1OT7dbqowlLHRyJwzk5FI3BXVKkYLh4uFSgMwRGpXhReh4lz-DoXhERfY5tBU451oG75fA4z8nWsYiKx7F5nEDWrF4efPQMImAYV2cyY8csOHsoXE4JArTwKm4wi-NspSJzSBPD~4lsbDpkEo0vh1qsPNGNesU6UgbZk-8~qhyQjz~MI9gMBD1Knj2dp-NF6uTlflFIcLK3iNCVIkFrJcVmJdForMMMT0dMljMbEqXSvDmZy3yVOltzIWgta0w__" alt="">
-            <img src="https://s3-alpha-sig.figma.com/img/8c09/c4fe/190b9bc1078418e9d94df900bf933899?Expires=1718582400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=AtQ87Hmsk66mftvY2Re2pMkxX0Q6Sy52~8sjj3~2R~cY548afXHEizPNlv5U4bSXl1k2umd-0GH2ivtJXlMWiJ7o~s8F7FUCnKlxtxeTbwGUGHb1BuTN9qzN~FBP0XBOLjkis6Zp~kkIOh595dA4ioFRUroD-az54zqh-XE0Ue66G90TynReNXjcyfaQzt8F2DtUZf4RLZvIMzUGHc2F8SsVX0aeHe1pX1ekHvqZaqW1jupU1J0OjfgtKzsTERA7etwWfyymMTkZT6z45mLera1c04Us8-tSinm7gFLd9lkZfAuQbvFb8kBP6UKqe4G-r5~J4wdRalW~4OWQunEEGQ__" alt="">
-        </div>
+            <div>
+                <img src="https://s3-alpha-sig.figma.com/img/bcf1/1e0f/89349f78ed6fcbfb1cc2fead6254686f?Expires=1718582400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=TK0~fdoYL07BOOfL16j2j6k6ka-4B9LRahyZame3pSW7b9O1fecC8GOUHS8m6eIY~GgyvFeTHubDaDzBp7~k8e8u1OT7dbqowlLHRyJwzk5FI3BXVKkYLh4uFSgMwRGpXhReh4lz-DoXhERfY5tBU451oG75fA4z8nWsYiKx7F5nEDWrF4efPQMImAYV2cyY8csOHsoXE4JArTwKm4wi-NspSJzSBPD~4lsbDpkEo0vh1qsPNGNesU6UgbZk-8~qhyQjz~MI9gMBD1Knj2dp-NF6uTlflFIcLK3iNCVIkFrJcVmJdForMMMT0dMljMbEqXSvDmZy3yVOltzIWgta0w__" alt="">
+                <img src="https://s3-alpha-sig.figma.com/img/8c09/c4fe/190b9bc1078418e9d94df900bf933899?Expires=1718582400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=AtQ87Hmsk66mftvY2Re2pMkxX0Q6Sy52~8sjj3~2R~cY548afXHEizPNlv5U4bSXl1k2umd-0GH2ivtJXlMWiJ7o~s8F7FUCnKlxtxeTbwGUGHb1BuTN9qzN~FBP0XBOLjkis6Zp~kkIOh595dA4ioFRUroD-az54zqh-XE0Ue66G90TynReNXjcyfaQzt8F2DtUZf4RLZvIMzUGHc2F8SsVX0aeHe1pX1ekHvqZaqW1jupU1J0OjfgtKzsTERA7etwWfyymMTkZT6z45mLera1c04Us8-tSinm7gFLd9lkZfAuQbvFb8kBP6UKqe4G-r5~J4wdRalW~4OWQunEEGQ__" alt="">
+           
+            </div>
+            </div>
     </main>
 </body>
 </html>
