--- a/SDLC/Assignment/Static cart and checkout/orderPlaced.html
+++ b/SDLC/Assignment/Static cart and checkout/orderPlaced.html
@@ -42,7 +42,7 @@
             <h1><i  style="color:green; font-size: 30px;"class="fas fa-shopping-bag"></i>  Your Shopping Cart</h1>
             <h2 style="color: green;">Your order has been placed successfully!</h2>
             <h2>Order id : 608657</h2>
-            <a href="../index.html">
+            <a href="./orderedCart.html">
                 <button onclick="goToHome()">Continue Shopping</button>
             </a>
             
