--- a/SDLC/Assignment/Static cart and checkout/orderedCart.html
+++ b/SDLC/Assignment/Static cart and checkout/orderedCart.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Checkout</title>
     <link rel="stylesheet" href="orderedCart.css">
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
 </head>
 
 <body>
@@ -115,9 +114,7 @@
                         </div>
                     </div>
                 </div>
-                <!-- <div class="deliveryBtn">
-                    <button>SELECT DELIVERY OPTIONS</button>
-                </div> -->
+              
             </div>
             <div class="orderSection">
                 <div class="itemsSection">
@@ -137,7 +134,7 @@
                         </div>
                     </div>
                     <div class="checkoutBtn">
-                        <a href="../page/login.html">
+                        <a href="./orderPlaced.html">
                             <button>Proceed to Checkout</button>
                         </a>
                     </div>
@@ -210,7 +207,7 @@
             </div>
         </div>
     </div>
-    <!-- <script src="orderedCartCart.js"></script> -->
+   
 </body>
 
 </html>
